cabal-version:      2.4
name:               compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sschellhoff
maintainer:         soeren.schellhoff@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable compiler
    main-is:          Main.hs

    ghc-options:
        -Wall

    -- Modules included in this executable, other than Main.
    other-modules:      Ast, FMLParser, TypeInference, Frontend, Environment, FmlType, FmlError, TypeCheck, CodeGenerator, FmlConstant, Backend, Compile

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        megaparsec ^>=9.6.0,
        text ^>=2.0.2,
        case-insensitive ^>=1.2.1,
        parser-combinators ^>=1.3.0,
        containers,
        mtl ^>=2.2,
        transformers ^>=0.5.6.2,
    hs-source-dirs:   app
    default-language: Haskell2010
